hphp/hack/test/typecheck/references/binding_superglobals.php.exp
File "binding_superglobals.php", line 5, characters 11-12:
References are only permitted as function call arguments. (Parsing[1002])
